fix spacing in stories container

--- a/src/styles/_home.sass
+++ b/src/styles/_home.sass
@@ -35,7 +35,7 @@ body
     #home-favourite-vendor-stories-container
         display: grid
         grid-auto-flow: column
-        gap: 25px
+        gap: 10px
         overflow: auto
 
         #favourite-vendor-story
